fix: resolves sub section headers on small devices

--- a/src/shared/category-list/category-list.module.css
+++ b/src/shared/category-list/category-list.module.css
@@ -125,4 +125,10 @@
   margin: 0;
 }
 
-/* width: 70% */
+/* xs */
+@media only screen and (max-width: 600px) {
+  .community_subHeaders {
+    width: 70%;
+  }
+}
+
